# practical-python

./: foo.txt  main.py  pyproject.toml
Notes/03_Program_organization/: 04_Modules.md
Notes/04_Classes_objects/: 01_Class.md  02_Inheritance.md  04_Defining_exceptions.md
Notes/06_Generators/: 03_Producers_consumers.md
Notes/07_Advanced_Topics/: 01_Variable_arguments.md  03_Returning_functions.md
Work/: load_json.py  mortgage.py  report.py  seth_report.py  test_stock.py
Work/Seth/: bounce.py  fileparse.py  follow.py  load_json.py  mortgage.py  pcost.py  portfolio.py  seth_report.py  stock.py  ticker.py
Work/Seth/Data/: stocklog.csv
Work/porty/: fileparse.py  follow.py  portfolio.py  report.py  ticker.py  typedproperty.py
Work/test_data/: test_portfolio.csv
tests/: open_file.py  test_open_file.py  test_pcostl.py
